--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: Statistics for Life
 email: brittanyfarnsworth@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Statistics influence more and more of our daily lives. This blog is a place to share statistical ideas that interest me and help
+  us better understand the world around us.
 baseurl: "/statsforlife" # the subpath of your site, e.g. /blog
 url: "https://brittany-russell.github.io/statsforlife/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
