--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Statistics for Life
 email: brittanyfarnsworth@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Statistics is a powerful tool for understanding and explaining the world around us, from groundbreaking medical research 
-  to guiding our everyday decisions.
-  This blog is a place to share ideas that interest me in statistics, econometrics, biostatistics, and more. 
+  Statistics is a powerful tool for understanding and explaining the world around us. It can enable groundbreaking medical research, 
+  inform business strategy, or guide everyday decisions.
+  This blog is a place to share personal projects and ideas that interest me in statistics, econometrics, biostatistics, and more. 
 baseurl: "/statsforlife" # the subpath of your site, e.g. /blog
 url: "https://brittany-russell.github.io/statsforlife/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
